--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,9 @@
   line-height: 1.6;
   font-weight: 400;
   color: #faf0e6;
-  background-color: #333;
+  background: linear-gradient(135deg, #1e272e, #485460, #1e272e, #485460, #1e272e);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
 }
 
 a {
@@ -92,11 +94,25 @@ h1 {
   color: #535bf2;
 }
 
+.cart-count {
+  color: white;
+  background-color: rgb(230, 36, 36);
+  border-radius: 50%;
+  padding: 0.2rem 0.5rem;
+  font-size: 0.8rem;
+  position: relative;
+  top: -10px;
+  right: -2px;
+}
+
+/* Search */
+
+/* .search-bar {
+  width: 10px;
+} */
+
 /* Products */
 
-.search-bar {
-  width: 10px;
-}
 
 .product-ul {
   display: grid;
