--- a/src/index.css
+++ b/src/index.css
@@ -98,11 +98,11 @@ h1 {
   color: white;
   background-color: rgb(230, 36, 36);
   border-radius: 50%;
-  padding: 0.2rem 0.5rem;
+  padding: 0.1rem 0.5rem;
   font-size: 0.8rem;
   position: relative;
-  top: -10px;
-  right: -2px;
+  top: -50px;
+  left: 15px;
 }
 
 /* Search */
