--- a/src/components/Navigation/Header/nav.scss
+++ b/src/components/Navigation/Header/nav.scss
@@ -1,39 +1,40 @@
 .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .header-links {
+    list-style: none;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-  
-    .header-links {
-      list-style: none;
-      display: flex;
-      gap: 20px;
-  
-      li {
-        a {
-          text-decoration: none;
-          color: black;
-  
-          &:hover {
-            color: blue;
-          }
+    gap: 20px;
+
+    li {
+      a {
+        text-decoration: none;
+        color: black;
+
+        &:hover {
+          color: blue;
         }
       }
     }
-  
-    input[type="search"] {
-      padding: 5px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      outline: none;
-    }
-  
-    .cart-icon {
-      cursor: pointer;
-      font-size: 1.5rem;
-  
-      &:hover {
-        color: blue;
-      }
+  }
+
+  input[type="search"] {
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    outline: none;
+  }
+
+  .cart-icon {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    font-size: 1.5rem;
+
+    &:hover {
+      color: blue;
     }
   }
-  
+}
