--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 16px;
   line-height: 1.6;
   font-weight: 400;
@@ -87,6 +87,16 @@ h1 {
   color: #333;
   margin: auto 50px;
 }
+.cart-counter {
+  position: absolute;
+  top: 8px;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 2px 7px;
+  font-size: 0.8rem;
+  z-index: 1000;
+}
 
 .navbar .cart-icon:hover {
   color: #535bf2;
@@ -124,7 +134,6 @@ h1 {
   border-radius: 10px 10px 0 0;
 }
 
-
 @media screen and (min-width: 768px) {
   .product-ul {
     grid-template-columns: repeat(2, 1fr);
@@ -150,7 +159,6 @@ h1 {
 .product-title {
   font-size: 1.5em;
   margin-top: 20px;
-
 }
 
 .product-details {
@@ -185,14 +193,12 @@ h1 {
   text-decoration: line-through;
 }
 
-
 .star-rating {
   display: flex;
   gap: 5px;
   justify-content: center;
   color: gold;
 }
-
 
 /* Cart */
 
@@ -231,8 +237,8 @@ label {
   margin-bottom: 5px;
 }
 
-input[type='text'],
-input[type='email'],
+input[type="text"],
+input[type="email"],
 textarea {
   width: calc(100% - 22px);
   padding: 10px;
@@ -260,7 +266,6 @@ textarea {
   border-radius: 5px;
 } */
 
-
 button {
   background-color: #007bff;
   color: #fff;
@@ -276,7 +281,6 @@ button {
 button:hover {
   background-color: #0056b3;
 }
-
 
 /* Footer */
 
