--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,12 @@
   line-height: 1.6;
   font-weight: 400;
   color: #faf0e6;
-  background: linear-gradient(
-    135deg,
-    #1e272e,
-    #485460,
-    #1e272e,
-    #485460,
-    #1e272e
-  );
+  background: linear-gradient(135deg,
+      #1e272e,
+      #485460,
+      #1e272e,
+      #485460,
+      #1e272e);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
 }
@@ -96,6 +94,7 @@ h1 {
   color: #333;
   margin: auto 50px;
 }
+
 .cart-counter {
   position: absolute;
   top: 8px;
@@ -122,11 +121,20 @@ h1 {
   left: 15px;
 }
 
-/* Search */
+/* Hamburger Menu */
 
-/* .search-bar {
-  width: 10px;
-} */
+.menu {
+  display: flex;
+}
+
+.menu.open {
+  display: flex;
+}
+
+.burger-button {
+  display: none;
+}
+
 
 /* Products */
 
@@ -154,18 +162,6 @@ h1 {
   height: 300px;
   object-fit: contain;
   border-radius: 10px 10px 0 0;
-}
-
-@media screen and (min-width: 768px) {
-  .product-ul {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .product-ul {
-    grid-template-columns: 1fr;
-  }
 }
 
 /* Specific */
@@ -233,7 +229,6 @@ h1 {
   align-items: center;
   margin-bottom: 20px;
   border-bottom: 1px solid #ccc;
-  /* Add this line */
 }
 
 .item-name {
@@ -311,27 +306,6 @@ h1 {
 
 .checkout-button:hover {
   background-color: #45a049;
-}
-
-/* Media Queries Cart */
-@media screen and (max-width: 768px) {
-  .cart-item {
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 20px;
-  }
-
-  .item-details {
-    margin-bottom: 10px;
-  }
-
-  .quantity-container {
-    margin-right: 0;
-  }
-
-  .remove-button {
-    margin-top: 10px;
-  }
 }
 
 /* Contact */
@@ -434,10 +408,103 @@ button:hover {
   margin-top: 20px;
 }
 
+.clear-button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #f73939;
+  color: #fff;
+  text-decoration: none;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: auto;
+  margin-top: 10px;
+}
+
 /* Footer */
 
 .footer-p {
   padding: 20px;
   color: #d9d9d9;
   text-align: center;
+}
+
+/* Media Queries */
+
+@media (max-width: 768px) {
+  .hamburger-menu {
+    display: block;
+  }
+}
+
+/* Media Queries Cart */
+@media screen and (max-width: 768px) {
+  .cart-item {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 20px;
+  }
+
+  .item-details {
+    margin-bottom: 10px;
+  }
+
+  .quantity-container {
+    margin-right: 0;
+  }
+
+  .remove-button {
+    margin-top: 10px;
+  }
+}
+
+/* Media Queries Products */
+
+@media screen and (min-width: 768px) {
+  .product-ul {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .product-ul {
+    grid-template-columns: 1fr;
+  }
+}
+
+/* Media Queries Hamburger */
+
+@media (max-width: 768px) {
+  .menu {
+    display: none;
+  }
+
+  .menu.open {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    /* height: 100%; */
+    background-color: #fa0000;
+    z-index: 999;
+  }
+
+  .burger-button {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: unset;
+    z-index: 1000;
+
+    &:hover {
+      background-color: unset;
+    }
+
+    &::after {
+      color: black;
+    }
+  }
 }
