--- a/src/index.css
+++ b/src/index.css
@@ -485,19 +485,30 @@ button:hover {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    /* height: 100%; */
-    background-color: #fa0000;
     z-index: 999;
   }
 
+  .cart-icon {
+    position: fixed;
+    right: 0;
+    top: 0;
+    z-index: 1000;
+  }
+
+  .navbar {
+    flex-direction: column;
+    align-items: center;
+  }
+
   .burger-button {
-    display: block;
+    display: flex;
     position: fixed;
     top: 0;
     left: 0;
     background-color: unset;
     z-index: 1000;
+    margin: auto;
+    width: 20%;
 
     &:hover {
       background-color: unset;
