--- a/src/index.css
+++ b/src/index.css
@@ -272,13 +272,6 @@ h1 {
   padding-bottom: 10px;
 }
 
-.remove-button {
-  padding: 5px 10px;
-  background-color: #f73939;
-  border: none;
-  cursor: pointer;
-  color: white;
-}
 
 .item-total {
   margin-left: auto;
@@ -291,7 +284,7 @@ h1 {
   padding: 20px;
 }
 
-.checkout-button {
+.button {
   display: block;
   width: 100%;
   padding: 10px;
@@ -302,6 +295,15 @@ h1 {
   border: none;
   cursor: pointer;
   margin-top: 20px;
+}
+
+.remove-button,
+.checkout-button {
+  padding: 5px 10px;
+}
+
+.remove-button {
+  background-color: #f73939;
 }
 
 .checkout-button:hover {
